--- a/public/index.html
+++ b/public/index.html
@@ -41,5 +41,12 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+
+    <script>
+      // just turning 'debug' on by default so people
+      // don't have to figure out how to do it when
+      // just viewing the sample
+      localStorage.debug = true
+    </script>
   </body>
 </html>
